<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_margin="8dp"
    android:background="@drawable/border_black"> <!-- Aquí se aplica el borde -->

    <ImageView
        android:id="@+id/imageProduct"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_monaco"
        android:contentDescription="@string/product_image"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textColor="@color/monaco_dark"/>

    <TextView
        android:id="@+id/tvProductDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_description"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        android:textColor="@color/monaco_purple"/>

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="18sp"
        android:textColor="@color/monaco_blue"
        android:layout_marginTop="4dp"/>

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:backgroundTint="@color/monaco_blue"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"/>

</LinearLayout>
