<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:background="@color/background_light_purple">

    <TextView
        android:id="@+id/tvStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_tienda"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/purple_dark"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etStoreName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_tienda"
        android:textColorHint="@color/text_secondary"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:backgroundTint="@color/purple_main"
        android:layout_marginBottom="12dp"/>



    <EditText
        android:id="@+id/etStoreAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direccion_tienda"
        android:textColorHint="@color/text_secondary"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:backgroundTint="@color/purple_main"
        android:layout_marginBottom="12dp"
        android:focusable="false"
        android:clickable="false"
        android:cursorVisible="false"/>

    <EditText
        android:id="@+id/etLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:inputType="numberDecimal"
        android:textAllCaps="false"
        android:textColorHint="@color/text_secondary"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:backgroundTint="@color/purple_main"
        android:layout_marginBottom="12dp"
        android:focusable="false"
        android:clickable="false"
        android:cursorVisible="false"/>

    <EditText
        android:id="@+id/etLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:inputType="numberDecimal"
        android:textAllCaps="false"
        android:textColorHint="@color/text_secondary"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:backgroundTint="@color/purple_main"
        android:layout_marginBottom="12dp"
        android:focusable="false"
        android:clickable="false"
        android:cursorVisible="false"/>

    <Button
        android:id="@+id/btnSelectLocation"
        android:text="@string/selec_mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="12dp" />


    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/button_secondary"
        android:textColor="@color/white"/>
</LinearLayout>
