<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@drawable/border_black"
    android:layout_marginBottom="8dp"
    android:gravity="center_vertical">

    <!-- Sección central: nombre, dirección y coordenadas -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStoreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_tienda"
            android:textSize="20sp"
            android:textColor="@color/text_dark" />

        <TextView
            android:id="@+id/tvStoreAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion_tienda"
            android:textSize="14sp"
            android:textColor="@color/text_gray"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tvStoreCoords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat_lon"
            android:textSize="14sp"
            android:textColor="@color/monaco_purple"
            android:layout_marginTop="4dp"/>
    </LinearLayout>

    <!-- Botones a la derecha -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_vertical">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/button_edit"
            android:text="@string/edit"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_delete" />
    </LinearLayout>
</LinearLayout>
