<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_light_purple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/tvEditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_product_title"
            android:textSize="22sp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/text_primary" />


        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_monaco"
            android:layout_marginBottom="12dp"
            android:background="@color/image_background" />


        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_image"
            android:backgroundTint="@color/button_primary"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />


        <EditText
            android:id="@+id/etName"
            android:hint="@string/product_name"
            android:inputType="text"
            android:textAllCaps="false"
            android:textColorHint="@color/text_secondary"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:backgroundTint="@color/purple_main"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etDescription"
            android:hint="@string/product_description"
            android:inputType="textMultiLine"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"
            android:textColorHint="@color/text_secondary"
            android:textColor="@color/black"
            android:backgroundTint="@color/purple_main"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/etPrice"
            android:hint="@string/hint_product_price"
            android:inputType="numberDecimal"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textColorHint="@color/text_secondary"
            android:backgroundTint="@color/purple_main"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_changes"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/button_primary"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/button_secondary"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>
