<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_vertical"
    android:background="@color/bg_light_purple">

    <TextView
        android:text="@string/register"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/purple_main"
        android:layout_marginBottom="28dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/etName"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <EditText
        android:id="@+id/etPhone"
        android:hint="@string/phone"
        android:inputType="phone"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"
        android:backgroundTint="@color/purple_main"
        android:textColor="@color/white"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnGoLogin"
        android:text="@string/already_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:backgroundTint="@color/purple_dark"
        android:textColor="@color/white" />

</LinearLayout>
