<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@drawable/border_black"
    android:layout_marginBottom="8dp"
    android:gravity="center_vertical">

    <!-- Información del usuario -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/monaco_dark"/>

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="14sp"
            android:textColor="@color/monaco_purple"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/tvUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="14sp"
            android:textColor="@color/text_dark"
            android:layout_marginTop="2dp"/>
    </LinearLayout>

    <!-- Botones Editar y Eliminar -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_vertical">

        <Button
            android:id="@+id/btnEditUser"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_edit"
            android:layout_marginBottom="6dp"/>

        <Button
            android:id="@+id/btnDeleteUser"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:text="@string/delete_user"
            android:textColor="@color/white"
            android:backgroundTint="@android:color/holo_red_light"/>
    </LinearLayout>
</LinearLayout>
