<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_light_purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCartTitle"
        android:text="@string/cart_title"
        android:textSize="22sp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textColor="@color/text_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="12dp"
        android:background="@color/recycler_background" />

    <TextView
        android:id="@+id/tvTotal"
        android:text="@string/total"
        android:textSize="18sp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"
        android:textColor="@color/text_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnClearCart"
        android:text="@string/clear_cart"
        android:backgroundTint="@color/button_danger"
        android:textColor="@color/white"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnBack"
        android:text="@string/btn_back_menu"
        android:backgroundTint="@color/button_primary"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
